Move to Java 17 and Quarkus 2.14 (#60)
Signed-off-by: Jakub Scholz <www@scholzj.com>

Signed-off-by: Jakub Scholz <www@scholzj.com>