@@ -2,9 +2,6 @@
 set -e
 set +x
 
-# Deny illegal access option is supported only on Java 9 and higher
-JAVA_OPTS="${JAVA_OPTS} --illegal-access=deny"
-
 # Exit when we run out of heap memory
 JAVA_OPTS="${JAVA_OPTS} -XX:+ExitOnOutOfMemoryError"
 
